# countingsheep

./: .dockerignore  .env.sample  .gitignore  .no-mistakes.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  README.md  deny.toml  docker-compose.kafka.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
.harness/orgs/default/projects/default_project/envs/pre_production/: countingsheepstg.yaml
.lavish/: devcontainer-plan.html
.no-mistakes/evidence/chore/devcontainer/: 00-SUMMARY.md  01-toolchain-versions.txt  02-ci-parity-run.txt
.no-mistakes/evidence/feat/kafka-sheep-publishing/: kafka-http-roundtrip-validation.txt  kafka-roundtrip-consumer.txt
.no-mistakes/evidence/mguilarducci/tha-16-featingest-accept-usage-events-in-batches/: batch-ingestion-curl-transcript.txt
.no-mistakes/evidence/mguilarducci/tha-17-featingest-ensure-events-carry-consistent-trustworthy/: ingest-timestamps-e2e.md
.no-mistakes/evidence/mguilarducci/tha-18-featobservability-adopt-posthog-error-tracking/: posthog-error-tracking-evidence.md
.no-mistakes/evidence/mguilarducci/tha-20-load-test-the-ingestion-endpoint-with-thousands-of-requests/: load.txt  oha-baseline.txt  smoke.txt  soak.txt  spike.txt  stress.txt
crates/countingsheep_env_vars/: Cargo.toml
crates/countingsheep_env_vars/src/: lib.rs
crates/countingsheep_test_utils/: Cargo.toml
crates/countingsheep_test_utils/src/: lib.rs  producer.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md
loadtest/: README.md  run.sh
loadtest/k6/: load.js  smoke.js  soak.js  spike.js  stress.js
loadtest/k6/lib/: checks.js  config.js  payload.js
loadtest/oha/: baseline.sh
src/: app.rs  config.rs  error.rs  ingest.rs  lib.rs  middleware.rs  observability.rs  router.rs
src/config/: kafka.rs  posthog.rs  server.rs
src/ingest/: handler.rs  producer.rs  sheep.rs  stamp.rs
src/observability/: error_tracking.rs
src/util/: tracing.rs
tests/: health.rs  kafka_integration.rs  publish.rs  sheeps.rs
