[package]
name = "countingsheep"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/countingsheep_env_vars"]

[lints]
workspace = true

[workspace.lints.rust]
future_incompatible = "warn"
nonstandard_style = "warn"
rust_2018_idioms = "warn"
rust_2018_compatibility = "warn"
rust_2021_compatibility = "warn"
unused = "warn"

[workspace.lints.rustdoc]
unescaped_backticks = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["macros"] }
countingsheep_env_vars = { path = "crates/countingsheep_env_vars" }
bon = "3.9.3"
derive_more = { version = "2.1.1", features = ["deref"] }
serde_json = "1.0.135"
thiserror = "2.0.9"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "signal"] }
tracing = "0.1.41"
