[package]
name = "countingsheep"
version = "0.1.0"
edition = "2024"
license.workspace = true

[workspace]
members = ["crates/countingsheep_env_vars", "crates/countingsheep_test_utils"]

[workspace.package]
license = "Apache-2.0"

[lints]
workspace = true

[workspace.lints.rust]
future_incompatible = "warn"
nonstandard_style = "warn"
rust_2018_idioms = "warn"
rust_2018_compatibility = "warn"
rust_2021_compatibility = "warn"
unused = "warn"

[workspace.lints.rustdoc]
unescaped_backticks = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["macros"] }
bon = "3.9.3"
countingsheep_env_vars = { path = "crates/countingsheep_env_vars" }
derive_more = { version = "2.1.1", features = ["deref"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
time = { version = "0.3.41", features = ["parsing", "macros"] }
tokio ={ version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "signal"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["trace", "catch-panic", "timeout", "compression-full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

[dev-dependencies]
countingsheep_test_utils = { path = "crates/countingsheep_test_utils" }
tracing-test = "0.2.5"
