[package]
name = "countingsheep_test_utils"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
countingsheep = { path = "../.." }
http-body-util = "0.1.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tower = "0.5.2"
