[package]
name = "countingsheep_test_utils"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
countingsheep = { path = "../.." }
http-body-util = "0.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tower = "0.5.3"
